namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace
  labels:
    name: test
